--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "sas": "^3.0.4",
+    "vue": "^3.2.13",
+    "vue-carousel-3d": "^1.0.1",
+    "vueperslides": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +26,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "root": true,
